--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
         <div class="Container">
             <h1>HTML5 e CSS3</h1>
             <h2>Você faz. Você vê. Você aprende.</h2>
+            <a href="https://www.youtube.com/watch?v=M2GjflypG6E&list=PLbEOwbQR9lqySIIlPJ-Qwo4f4HSuXVeWk&index=15" target="_blank" class="Botao">Saiba +</a>
         </div>
-
     </main>
-
     <!-- Sobre -->
-
     <section id="sobre">
         <div class="Container">
             <h2>Aprender na prática</h2>
