--- a/index.html
+++ b/index.html
@@ -42,7 +42,25 @@
     <!-- Sobre -->
     <section id="sobre">
         <div class="Container">
-            <h2>Aprender na prática</h2>
+            <div id="destaqueSobre">
+                <img src="img/html5css3.jpg" alt="notebook">
+            </div>
+            <div id="textoSobre">
+                <h2>Aprender na prática</h2>
+                <p>Aprenda HTML5, CSS3 SEO de forma simples, prática e objetiva desenvolvendo passo a passo do zero até a hospedagem de um site one page moderno e responsivo</p>
+                <div class="TopicosSobre">
+                    <img src="img/html5.png" alt="html5">
+                    <p>HTML5</p>
+                </div>
+                <div class="TopicosSobre">
+                    <img src="img/css3.png" alt="Css3">
+                    <p>CSS3</p>
+                </div>
+                <div class="TopicosSobre">
+                    <img src="img/seo.png" alt="seo">
+                    <p>SEO</p>
+                </div>
+            </div>
         </div>
 
     </section>
